# logerr

./: .clang-format  CMakeLists.txt  LICENSE  README.md  appinfo.cpp.in  gitInfo.h.in
cmake/: FindBfd.cmake  gitInfo.cmake  windeployqt.cmake
example/: CMakeLists.txt  logReceiver.h  main.cpp  mainWindow.cpp  mainWindow.h
example-console/: CMakeLists.txt  main.cpp
example-qt-console/: CMakeLists.txt  main.cpp
gitInfo/: CMakeLists.txt
gitinfo/: CMakeLists.txt  README.md
gitinfo/cmake/: gitinfo.cmake
include/: LogFileWriter.h  LogModel.h  LogStream.h  StackTrace.h  StackTraceException.h  StackTraceSIGSEGV.h  appinfo.h  concurrentQueue.h  logDock.h  logerr  logerrMacros.h  timestampLite.h
logerr/: CMakeLists.txt  appinfo.cpp.in
logerr/include/: LogFileWriter.h  LogStream.h  StackTrace.h  StackTraceException.h  StackTraceSIGSEGV.h  appinfo.h  backtraceSymbols.h  concurrent_queue.h  date.h  function_view.h  logerr  logerrConsoleApplication.h  logerrMacros.h  logerrThread.h  logerrTypes.h  sigtermHandler.h  timestampLite.h
logerr/src/: LogFileWriter.cpp  LogStream.cpp  StackTrace.cpp  StackTraceException.cpp  StackTraceSIGSEGV.cpp  backtraceSymbols.cpp  sigtermHandler.cpp  timestampLite.cpp
qlogerr/: CMakeLists.txt  qappinfo.cpp.in
qlogerr/include/: Application.h  ExceptionDialog.h  LogModel.h  LogProxyModel.h  StackTraceSIGSEGVQt.h  coreApplication.h  logBlaster.h  logDock.h  logReceiver.h  logerrGuiApplication.h  logerrQtConsoleApplication.h  qCoreAppThread.h  qCoreAppThreadPrivate.h  qappinfo.h
qlogerr/src/: Application.cpp  ExceptionDialog.cpp  LogModel.cpp  LogProxyModel.cpp  StackTraceSIGSEGVQt.cpp  coreApplication.cpp  logBlaster.cpp  logDock.cpp  logReceiver.cpp  qCoreAppThread.cpp
src/: Application.cpp  ExceptionDialog.cpp  LogFileWriter.cpp  LogModel.cpp  LogStream.cpp  StackTrace.cpp  StackTraceException.cpp  StackTraceSIGSEGV.cpp  logDock.cpp  timestampLite.cpp
